# watchd

./: .gitignore  .rustfmt.toml  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md
.build/debian/: Dockerfile
.build/rhel/: Dockerfile
.rpm/: watchd.spec
etc/: config.toml
example/: config.toml
examples/: config.toml
package/etc/: config.toml
package/systemd/: watchd.service
src/: cli.rs  config.rs  handler.rs  logger.rs  main.rs  monitor.rs  signal.rs  watcher.rs
src/thread/: watcher.rs
src/watcher/: handler.rs  mod.rs
