[package]
name = "watchd"
version = "0.2.2"
authors = ["Davide Casella <dcasella@libc.it>"]
edition = "2018"
description = "A fearlessly concurrent filesystem watcher daemon"
license = "MIT"

[dependencies]
clap = "2"
lazy_static = "1.2"
notify = "4"
regex = "1"
serde = "1"
serde_derive = "1"
signal-hook = "0.1"
slog = "2.4"
slog-async = "2.3"
slog-scope = "4.1"
slog-term = "2.4"
toml = "0.4"

[package.metadata.deb]
maintainer = "Davide Casella <dcasella@libc.it>"
depends = "$auto"
section = "rust"
priority = "optional"
assets = [
    ["target/release/watchd", "usr/sbin/", "755"],
    ["package/etc/config.toml", "etc/watchd/", "640"],
    ["package/systemd/watchd.service", "lib/systemd/system/", "644"]
]

[package.metadata.rpm.cargo]
buildflags = ["--release"]

[package.metadata.rpm.targets]
watchd = { path = "/usr/sbin/watchd" }

[package.metadata.rpm.files]
"etc/config.toml" = { path = "/etc/watchd/config.toml" }
"systemd/watchd.service" = { path = "/usr/lib/systemd/system/watchd.service" }
